[package]
name = "ambience"
version = "0.2.0"
authors = ["Valthor Halldorsson <vlthrh@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Lightweight library for passing ambient parameters"
repository = "https://github.com/vlthr/ambience"
# documentation = "https://docs.rs/ambience"
categories = ["rust-patterns"]
readme = "README.md"

[dependencies]
thiserror = "1"
